--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,9 @@ export("%<>%")
 export("%>%")
 export(build_cv)
 export(create_CV_object)
+export(print_contact_info)
+export(print_section)
+export(print_text_block)
 importFrom(RefManageR,ReadZotero)
 importFrom(RefManageR,WriteBib)
 importFrom(bookdown,pdf_document2)
@@ -15,7 +18,6 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,pull)
 importFrom(fs,path)
-importFrom(glue,glue)
 importFrom(glue,glue_data)
 importFrom(googlesheets4,gs4_deauth)
 importFrom(googlesheets4,read_sheet)
@@ -24,14 +26,10 @@ importFrom(lubridate,year)
 importFrom(lubridate,ymd)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
-importFrom(purrr,set_names)
-importFrom(purrr,walk2)
-importFrom(readr,read_csv)
 importFrom(rlang,.data)
 importFrom(rmarkdown,render)
+importFrom(spelling,spell_check_files)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
-importFrom(stringr,str_extract_all)
-importFrom(stringr,str_replace_all)
 importFrom(tidyr,starts_with)
 importFrom(tidyr,unite)
