more refactors and templates

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,15 @@ export("%<>%")
 export("%>%")
 export(build_cv)
 export(create_CV_object)
+export(latexify)
 export(print_contact_info)
 export(print_section)
+export(print_skills_block)
 export(print_text_block)
 importFrom(RefManageR,ReadZotero)
 importFrom(RefManageR,WriteBib)
 importFrom(bookdown,pdf_document2)
+importFrom(dplR,latexify)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,desc)
