--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(lubridate,ymd)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(rlang,.data)
+importFrom(rlang,warn)
 importFrom(rmarkdown,render)
 importFrom(spelling,spell_check_files)
 importFrom(stringr,str_detect)
