use xelatex, change bib object arguments to bib files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,pull)
 importFrom(fs,path)
+importFrom(fs,path_package)
 importFrom(glue,glue_data)
 importFrom(googlesheets4,gs4_deauth)
 importFrom(googlesheets4,read_sheet)
